antlr_py3/Pam_v2Parser.py
# Generated from C:/Users/anitr/OneDrive/Documents/__University/6sem/PVSUS/antlr_interpretor\Pam_v2.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Pam_v2Parser ( Parser ):

    grammarFileName = "Pam_v2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'read'", "'write'", "','", "'if'", 
                     "'then'", "'else'", "'fi'", "'while'", "'do'", "'end'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'and'", "'or'", "'not'", "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WEAKOP", "STRONGOP", "RELATION", "BOOL", "CONJUNCTION", 
                      "DISCJUNCTION", "NOT", "SEMICOLON", "LPARENTHESIS", 
                      "RPARENTHESIS", "NUMBER", "VARNAME", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_assign_stmt = 3
    RULE_input_stmt = 4
    RULE_output_stmt = 5
    RULE_varlist = 6
    RULE_cond_stmt = 7
    RULE_loop = 8
    RULE_log_expr = 9
    RULE_log_term = 10
    RULE_log_elem = 11
    RULE_condition = 12
    RULE_expr = 13
    RULE_term = 14
    RULE_elem = 15

    ruleNames =  [ "progr", "series", "stmt", "assign_stmt", "input_stmt", 
                   "output_stmt", "varlist", "cond_stmt", "loop", "log_expr", 
                   "log_term", "log_elem", "condition", "expr", "term", 
                   "elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    WEAKOP=12
    STRONGOP=13
    RELATION=14
    BOOL=15
    CONJUNCTION=16
    DISCJUNCTION=17
    NOT=18
    SEMICOLON=19
    LPARENTHESIS=20
    RPARENTHESIS=21
    NUMBER=22
    VARNAME=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(Pam_v2Parser.SeriesContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = Pam_v2Parser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.series()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.StmtContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.StmtContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.SEMICOLON)
            else:
                return self.getToken(Pam_v2Parser.SEMICOLON, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = Pam_v2Parser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.stmt()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.SEMICOLON:
                self.state = 35
                self.match(Pam_v2Parser.SEMICOLON)
                self.state = 36
                self.stmt()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(Pam_v2Parser.Assign_stmtContext,0)


        def input_stmt(self):
            return self.getTypedRuleContext(Pam_v2Parser.Input_stmtContext,0)


        def output_stmt(self):
            return self.getTypedRuleContext(Pam_v2Parser.Output_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(Pam_v2Parser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(Pam_v2Parser.LoopContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = Pam_v2Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Pam_v2Parser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.assign_stmt()
                pass
            elif token in [Pam_v2Parser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.input_stmt()
                pass
            elif token in [Pam_v2Parser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.output_stmt()
                pass
            elif token in [Pam_v2Parser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.cond_stmt()
                pass
            elif token in [Pam_v2Parser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(Pam_v2Parser.VARNAME, 0)

        def log_expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.Log_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.ExprContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = Pam_v2Parser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(Pam_v2Parser.VARNAME)
            self.state = 50
            self.match(Pam_v2Parser.T__0)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 51
                self.log_expr()
                pass

            elif la_ == 2:
                self.state = 52
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(Pam_v2Parser.VarlistContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_input_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_stmt" ):
                listener.enterInput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_stmt" ):
                listener.exitInput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = Pam_v2Parser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_input_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(Pam_v2Parser.T__1)
            self.state = 56
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(Pam_v2Parser.VarlistContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_output_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_stmt" ):
                listener.enterOutput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_stmt" ):
                listener.exitOutput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_stmt" ):
                return visitor.visitOutput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def output_stmt(self):

        localctx = Pam_v2Parser.Output_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_output_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(Pam_v2Parser.T__2)
            self.state = 59
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.VARNAME)
            else:
                return self.getToken(Pam_v2Parser.VARNAME, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = Pam_v2Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(Pam_v2Parser.VARNAME)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.T__3:
                self.state = 62
                self.match(Pam_v2Parser.T__3)
                self.state = 63
                self.match(Pam_v2Parser.VARNAME)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.Log_exprContext,0)


        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.SeriesContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.SeriesContext,i)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = Pam_v2Parser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(Pam_v2Parser.T__4)
            self.state = 70
            self.log_expr()
            self.state = 71
            self.match(Pam_v2Parser.T__5)
            self.state = 72
            self.series()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Pam_v2Parser.T__6:
                self.state = 73
                self.match(Pam_v2Parser.T__6)
                self.state = 74
                self.series()


            self.state = 77
            self.match(Pam_v2Parser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.Log_exprContext,0)


        def series(self):
            return self.getTypedRuleContext(Pam_v2Parser.SeriesContext,0)


        def getRuleIndex(self):
            return Pam_v2Parser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = Pam_v2Parser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(Pam_v2Parser.T__8)
            self.state = 80
            self.log_expr()
            self.state = 81
            self.match(Pam_v2Parser.T__9)
            self.state = 82
            self.series()
            self.state = 83
            self.match(Pam_v2Parser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.Log_termContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.Log_termContext,i)


        def DISCJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.DISCJUNCTION)
            else:
                return self.getToken(Pam_v2Parser.DISCJUNCTION, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_expr" ):
                return visitor.visitLog_expr(self)
            else:
                return visitor.visitChildren(self)




    def log_expr(self):

        localctx = Pam_v2Parser.Log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_log_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.log_term()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.DISCJUNCTION:
                self.state = 86
                self.match(Pam_v2Parser.DISCJUNCTION)
                self.state = 87
                self.log_term()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.Log_elemContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.Log_elemContext,i)


        def CONJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.CONJUNCTION)
            else:
                return self.getToken(Pam_v2Parser.CONJUNCTION, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_log_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_term" ):
                listener.enterLog_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_term" ):
                listener.exitLog_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_term" ):
                return visitor.visitLog_term(self)
            else:
                return visitor.visitChildren(self)




    def log_term(self):

        localctx = Pam_v2Parser.Log_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_log_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.log_elem()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.CONJUNCTION:
                self.state = 94
                self.match(Pam_v2Parser.CONJUNCTION)
                self.state = 95
                self.log_elem()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(Pam_v2Parser.ConditionContext,0)


        def BOOL(self):
            return self.getToken(Pam_v2Parser.BOOL, 0)

        def LPARENTHESIS(self):
            return self.getToken(Pam_v2Parser.LPARENTHESIS, 0)

        def log_expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.Log_exprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(Pam_v2Parser.RPARENTHESIS, 0)

        def VARNAME(self):
            return self.getToken(Pam_v2Parser.VARNAME, 0)

        def NOT(self):
            return self.getToken(Pam_v2Parser.NOT, 0)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_log_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_elem" ):
                listener.enterLog_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_elem" ):
                listener.exitLog_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_elem" ):
                return visitor.visitLog_elem(self)
            else:
                return visitor.visitChildren(self)




    def log_elem(self):

        localctx = Pam_v2Parser.Log_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_log_elem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Pam_v2Parser.NOT:
                self.state = 101
                self.match(Pam_v2Parser.NOT)


            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 104
                self.condition()
                pass

            elif la_ == 2:
                self.state = 105
                self.match(Pam_v2Parser.BOOL)
                pass

            elif la_ == 3:
                self.state = 106
                self.match(Pam_v2Parser.LPARENTHESIS)
                self.state = 107
                self.log_expr()
                self.state = 108
                self.match(Pam_v2Parser.RPARENTHESIS)
                pass

            elif la_ == 4:
                self.state = 110
                self.match(Pam_v2Parser.VARNAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.ExprContext,i)


        def RELATION(self):
            return self.getToken(Pam_v2Parser.RELATION, 0)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = Pam_v2Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.expr()
            self.state = 114
            self.match(Pam_v2Parser.RELATION)
            self.state = 115
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.TermContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.WEAKOP)
            else:
                return self.getToken(Pam_v2Parser.WEAKOP, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = Pam_v2Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.term()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.WEAKOP:
                self.state = 118
                self.match(Pam_v2Parser.WEAKOP)
                self.state = 119
                self.term()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pam_v2Parser.ElemContext)
            else:
                return self.getTypedRuleContext(Pam_v2Parser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(Pam_v2Parser.STRONGOP)
            else:
                return self.getToken(Pam_v2Parser.STRONGOP, i)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = Pam_v2Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.elem()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Pam_v2Parser.STRONGOP:
                self.state = 126
                self.match(Pam_v2Parser.STRONGOP)
                self.state = 127
                self.elem()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(Pam_v2Parser.NUMBER, 0)

        def VARNAME(self):
            return self.getToken(Pam_v2Parser.VARNAME, 0)

        def LPARENTHESIS(self):
            return self.getToken(Pam_v2Parser.LPARENTHESIS, 0)

        def expr(self):
            return self.getTypedRuleContext(Pam_v2Parser.ExprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(Pam_v2Parser.RPARENTHESIS, 0)

        def getRuleIndex(self):
            return Pam_v2Parser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem" ):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):
